refactor, agrego minimo de caracteres para password
