# infrastructure/routes/Auth.js
@@ -9,15 +9,15 @@ router.route("/authorization").post(AuthController.signup);
 router.route("/authentication").post(AuthController.login);
 router.route("/authentication").get(AuthController.authenticate);
 
-// Basic CRUD
-router.route("/authorization").get(UsersController.getAll);
-router.route("/authorization/:id").get(UsersController.get);
-//router.route("/authorization/").post(UsersController.create);
-router.route("/authorization/:id").put(UsersController.update);
-router.route("/authorization/:id").delete(UsersController.delete);
+// CRUD
+router.route("/authorization/users").get(UsersController.getAll);
+router.route("/authorization/users/:id").get(UsersController.get);
+router.route("/authorization/users").post(UsersController.create);
+router.route("/authorization/users/:id").put(UsersController.update);
+router.route("/authorization/users/:id").delete(UsersController.delete);
 
 // Password reset
-router.route("/password-reset").post(AuthController.sendPasswordResetEmail);
-//router.route("/password-reset/:userId/:token").post(AuthController.passwordReset);
+router.route("/authorization/password").post(AuthController.sendPasswordResetEmail);
+router.route("/authorization/password/:userId/:token").post(AuthController.passwordReset);
 
 module.exports = router;
